<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/workout_title_label" />

    <EditText
        android:id="@+id/workout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/workout_title_hint" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/workout_location_label" />

    <EditText
        android:id="@+id/workout_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/workout_location_hint" />

    <Button
        android:id="@+id/workout_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Thurs Oct 07 AEST 2021" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/workout_start_time_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select Start Time" />

        <Button
            android:id="@+id/workout_end_time_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Select End Time" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/group_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/workout_group_activity_label" />

</LinearLayout>